src/views/state-comparison/styles.scss
@import '@Project/css/variable.scss';

:global(.rich-text) {
    .groupHeader {
        margin-bottom: 20px;
        font-size: 20px;
        line-height: 24px;
        color: $dark_blue;
    }
    h3 {
        font-size: 24px;
        color: $dark_blue;
    }
    h4 {
        font-size: 16px;
        color: $light_blue;
        margin-bottom: 0;
    }
}


.typeContainer {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-bottom: 45px;
    .credit-rating & {
        justify-content: flex-start;
    }
}
.typeDiv {
    width: 400px;
    flex-grow: 1;
    margin-bottom: 18px;
}
:global(.rich-text) .typeHeader {
    font-size: 16px;
    display: inline-block;
    position: relative;
    color: $dark_gray;
    margin-bottom: 0.5em;
}
.debt_limit_type {
    width: 100%;
    max-width: 100%;
    p {
        margin-bottom: 0;
    }
}
.credit2015, .credit2018 {
    max-width: 145px;
    margin-right: 90px;
}

:global(.compare-label) {
    font-style: italic;
}
:global(.autoComplete_outerWrapper) {
    > span {
    margin-right: 20px;
    margin-top: 10px;
   }
    @media screen and (max-width: 834px){
        flex-direction: column;
        align-items: center;
        max-width: 320px;
    }
}
:global(.autoComplete_wrapper) {
    width: 100%;
    max-width: 320px;
    margin-right: 20px;
   
}

:global(.compare-selection-wrapper) {
    margin-bottom: 65px;
}
:global(.rich-text .autoComplete_result) {
    margin-left: 0;
}
:global(.autoComplete) {
    padding: 0;
    border-bottom-color: $gray;
    font-weight: bold;
    background: inline('./icon-search.png') no-repeat right center;
    background-size: 20px;
    &::-ms-clear { /* to hide x-out option on IE10 */
        visibility: hidden;
        width: 0;
        height: 0;
    }
    &::placeholder {
        font-weight: bold;
    }
}

.autoComplete0, .autoComplete0::placeholder {
    color: $light_blue;
}
/*.autoComplete0:focus, .autoComplete0:focus::placeholder {
    background-color: $light_blue;
    color: #fff;
}*/
.autoComplete_wrapper-0 :global(.autoComplete_highlighted){
    color: $light_blue;   
}
.autoComplete1, .autoComplete1::placeholder {
    color: $medium_blue;
}
/*.autoComplete1:focus, .autoComplete1:focus::placeholder {
    background-color: $medium_blue;
    color: #fff;
}*/
.autoComplete_wrapper-1 :global(.autoComplete_highlighted){
    color: $medium_blue;   
}
:global(.autoComplete_results_list) {
    box-shadow: 2px 2px 2px rgba(0,0,0,.2);
}
:global(.autoComplete_results_list) {
    height: auto;
    max-height: 45vh;
    border-left: 1px solid #e3e3e3;
}
:global(.autoComplete_result):focus {
    background-color: #fff;
    .autoComplete_wrapper-0 & {
        background-color: $light_blue;
        color: #fff;
        position: relative;
        :global(.autoComplete_highlighted) {
            color: #fff;
        }
    }
    .autoComplete_wrapper-1 & {
        background-color: $medium_blue;
        color: #fff;
        position: relative;
        :global(.autoComplete_highlighted) {
            color: #fff;
        }
    }
}
:global(.autoComplete)::selection, :global(.autoComplete):focus::selection {
    color: #fff;
    .autoComplete_wrapper-0 & {
        background-color: $light_blue;
    }
    .autoComplete_wrapper-1 & {
        background-color: $medium_blue;
    }   
}

.withTooltip{

    &::after {
        content: '';
        width: 12px;
        height: 12px;
        position: absolute;
        right: -15px;
        display: block;
        top: 0;
        background:transparent inline('tooltip.min.svg') no-repeat;

    }
    
}
:global(.showGoBack) {
    cursor: pointer;
    
    display: inline-block !important;
    position: relative;
    &::before {
        content: '';
        display: block;
        border-top: 5px solid rgba(0,0,0,0);
        border-left: 10px solid #FF7F49;
        border-bottom: 5px solid rgba(0,0,0,0);
        position: absolute;
        left: -14px;
        top: 5px;
    }
    &::after {
        content: ' go back';
        color: $gray;
        font-variant: small-caps;
        background-color: $highlight_blue;
        line-height: 17px;
        padding: 0 3px 3px;
        font-size: 16px;
        right: -60px;


    }
    &:hover {
        text-decoration: underline;
    }

}
h3:global(.showGoBack)::after {
    bottom: 4px;
    position: absolute;
}
h3:global(.showGoBack)::before {
    top:11px;
}

